--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
+<html lang="{{ site.locale }}">
+  
+  {% include head.html %}
+  <p>sdgasdkagnaskl</p>
   <body>
+    {% include page-header.html %}
 
-    {%- include header.html -%}
+    <section class="main-content">
+      
+      {{ content }}
 
-    <main class="page-content" aria-label="Content">
-      <p>helloooooooooo</p>
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+      {% include page-footer.html %}
 
-    {%- include footer.html -%}
+    </section>
 
   </body>
-
 </html>
-Footer
