--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <img src="./linkedin-brands.svg" href="https://www.linkedin.com/in/michaelaylesbury/" height="25px" width="25px">
+          <img src="./square-github-brands.svg" href="https://github.com/moaylesbury" height="25px" width="25px">
+          <img src="./file-solid.svg" href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf" height="25px" width="25px">
         </ul>
         {% endif %}
       </header>
