--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,20 +23,20 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
+<!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        {% endif %} -->
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+<!--         {% if site.github.is_user_page %} -->
+<!--         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p> -->
+<!--         {% endif %} -->
 
         {% if site.show_downloads %}
-        <ul class="downloads">
+<!--         <ul class="downloads"> -->
           <img src="./linkedin-brands.svg" href="https://www.linkedin.com/in/michaelaylesbury/" height="25px" width="25px">
           <img src="./square-github-brands.svg" href="https://github.com/moaylesbury" height="25px" width="25px">
           <img src="./file-solid.svg" href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf" height="25px" width="25px">
-        </ul>
+<!--         </ul> -->
         {% endif %}
       </header>
       <section>
