--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
 
         {% if site.show_downloads %}
 <!--         <ul class="downloads"> -->
-          <img src="./linkedin-brands.svg" href="https://www.linkedin.com/in/michaelaylesbury/" height="25px" width="25px">
-          <img src="./square-github-brands.svg" href="https://github.com/moaylesbury" height="25px" width="25px">
-          <img src="./file-solid.svg" href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf" height="25px" width="25px">
+          <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="./linkedin-brands.svg" height="25px" width="25px"></a>
+          <a href="https://github.com/moaylesbury"><img src="./square-github-brands.svg" height="25px" width="25px"></a>
+          <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="./file-solid.svg"  height="25px" width="25px"></a>
 <!--         </ul> -->
         {% endif %}
       </header>
