--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,8 @@
           <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="./linkedin-brands.svg" height="25px" width="25px"></a>
           <a href="https://github.com/moaylesbury"><img src="./square-github-brands.svg" height="25px" width="25px"></a>
           <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="./file-solid.svg"  height="25px" width="25px"></a>
+          <a href="https://www.hackerrank.com/moaylesbury"><img src="./hackerrank-brands.svg" height="25px" width="25px"></a>
+        
 <!--         </ul> -->
         {% endif %}
       </header>
