--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <img src="./envelope-solid.svg" height="25px" width="25px"><p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>moaylesbury@gmail.com</p>
 
 <!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
