--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <img src="./envelope-solid.svg" height="25px" width="25px"><p>moaylesbury@gmail.com</p>
+        <div display="inline-block"><img src="./envelope-solid.svg" height="10px" width="10px"><p>moaylesbury@gmail.com</p></div>
 
 <!--         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
