--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <div style="display:inline-block; overflow:hidden"><img src="./envelope-solid.svg" style="float:left; padding:4px" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
+        <div style="display:inline-block; overflow:hidden"><img src="./envelope-solid.svg" style="float:left; padding-left:4px padding-right:4px padding-top:4px" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
         <br>
 
 <!--         {% if site.github.is_project_page %}
@@ -39,6 +39,7 @@
           <a href="https://github.com/moaylesbury"><img src="./square-github-brands.svg" height="25px" width="25px"></a>
           <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="./file-solid.svg"  height="25px" width="25px"></a>
           <a href="https://www.hackerrank.com/moaylesbury"><img src="./hackerrank-brands.svg" height="25px" width="25px"></a>
+          <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="./salesforce.svg" height="25px" width="25px"></a>
         
 <!--         </ul> -->
         {% endif %}
