--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{/assets/imgs/site.logo | relative_url}}" alt="Logo" />
+          <img src="{{../assets/imgs/site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <div style="display:inline-block; overflow:hidden"><img src="./assets/svgs/envelope-solid.svg" style="float:left; padding-left:4px padding-right:4px padding-top:4px" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
+        <div style="display:inline-block; overflow:hidden"><img src="../assets/svgs/envelope-solid.svg" style="float:left; padding-left:4px padding-right:4px padding-top:4px" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
         <br>
 
 <!--         {% if site.github.is_project_page %}
@@ -35,11 +35,11 @@
 
         {% if site.show_downloads %}
 <!--         <ul class="downloads"> -->
-          <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="./assets/svgs/linkedin-brands.svg" height="25px" width="25px"></a>
-          <a href="https://github.com/moaylesbury"><img src="./assets/svgs/square-github-brands.svg" height="25px" width="25px"></a>
-          <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="./assets/svgs/file-solid.svg"  height="25px" width="25px"></a>
-          <a href="https://www.hackerrank.com/moaylesbury"><img src="./assets/svgs/hackerrank-brands.svg" height="25px" width="25px"></a>
-          <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="./assets/svgs/salesforce.svg" height="25px" width="25px"></a>
+          <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="../assets/svgs/linkedin-brands.svg" height="25px" width="25px"></a>
+          <a href="https://github.com/moaylesbury"><img src="../assets/svgs/square-github-brands.svg" height="25px" width="25px"></a>
+          <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="../assets/svgs/file-solid.svg"  height="25px" width="25px"></a>
+          <a href="https://www.hackerrank.com/moaylesbury"><img src="../assets/svgs/hackerrank-brands.svg" height="25px" width="25px"></a>
+          <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="../assets/svgs/salesforce.svg" height="25px" width="25px"></a>
         
 <!--         </ul> -->
         {% endif %}
