--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="../assets/imgs/site.logo" alt="Logo" />
+          <img src="../assets/imgs/logo.png" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
