--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <div style="display:inline-block; overflow:hidden"><img src="../assets/svgs/envelope-solid.svg" style="float:left; padding-left:4px padding-right:4px padding-top:4px" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
+        <div style="display:inline-block; overflow:hidden"><img src="../assets/svgs/envelope-solid.svg" style="float:left; padding-left:4px; padding-right:4px; padding-top:7px;" height="10px" width="10px"><p style="float:right">moaylesbury@gmail.com</p></div>
         <br>
 
 <!--         {% if site.github.is_project_page %}
