--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,11 @@
 
         {% if site.show_downloads %}
 <!--         <ul class="downloads"> -->
-          <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="../assets/svgs/linkedin-brands.svg" height="25px" width="25px"></a>
-          <a href="https://github.com/moaylesbury"><img src="../assets/svgs/square-github-brands.svg" height="25px" width="25px"></a>
-          <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="../assets/svgs/file-solid.svg"  height="25px" width="25px"></a>
-          <a href="https://www.hackerrank.com/moaylesbury"><img src="../assets/svgs/hackerrank-brands.svg" height="25px" width="25px"></a>
-          <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="../assets/svgs/salesforce.svg" height="25px" width="25px"></a>
+          <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="../assets/svgs/linkedin-brands.svg" height="25px" width="25px" target="_blank"></a>
+          <a href="https://github.com/moaylesbury"><img src="../assets/svgs/square-github-brands.svg" height="25px" width="25px" target="_blank"></a>
+          <a href="https://nbviewer.org/github/moaylesbury/moaylesbury.github.io/blob/gh-pages/Michael%20Aylesbury%20CV.pdf"><img src="../assets/svgs/file-solid.svg"  height="25px" width="25px" target="_blank"></a>
+          <a href="https://www.hackerrank.com/moaylesbury"><img src="../assets/svgs/hackerrank-brands.svg" height="25px" width="25px" target="_blank"></a>
+          <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="../assets/svgs/salesforce.svg" height="25px" width="25px" target="_blank"></a>
         
 <!--         </ul> -->
         {% endif %}
