--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 <!--         <ul class="downloads"> -->
           <a href="https://www.linkedin.com/in/michaelaylesbury/"><img src="../assets/svgs/linkedin-brands.svg" height="25px" width="25px" target="_blank"></a>
           <a href="https://github.com/moaylesbury"><img src="../assets/svgs/square-github-brands.svg" height="25px" width="25px" target="_blank"></a>
-          <a href="https://github.com/moaylesbury/moaylesbury.github.io/blob/gh-pages/assets/pdfs/CV.pdf"><img src="../assets/svgs/file-solid.svg"  height="25px" width="25px" target="_blank"></a>
+          <a href="https://github.com/moaylesbury/moaylesbury.github.io/blob/gh-pages/assets/pdfs/Michael%20Aylesbury%20CV.pdf"><img src="../assets/svgs/file-solid.svg"  height="25px" width="25px" target="_blank"></a>
           <a href="https://www.hackerrank.com/moaylesbury"><img src="../assets/svgs/hackerrank-brands.svg" height="25px" width="25px" target="_blank"></a>
           <a href="https://www.salesforce.com/trailblazer/moaylesbury"><img src="../assets/svgs/salesforce.svg" height="25px" width="25px" target="_blank"></a>
         
